- Removed win32 wxWidgets template files.(Thanks stahta01)
Deleted wxWidgets files templates/win32 folder.
And, edited templates/win32/Makefile.am.

--- a/src/templates/win32/Makefile.am
+++ b/src/templates/win32/Makefile.am
@@ -33,9 +33,4 @@ dist_pkgdata_DATA = dll.cbp \
 		SmartWin-main.cpp \
 		win32.cbp \
 		win32gui.template \
-		win32-main.cpp \
-		wxwidgets.cbp \
-		wxwidgets_static.cbp \
-		wxwidgets_u.cbp \
-		wxwidgets_static_u.cbp \
-		wxwidgets.template
+		win32-main.cpp
